# rustaria-v3

./: .gitignore  Cargo.toml  rustfmt.toml
client/: Cargo.toml
client/src/: api.rs  debug.rs  frontend.rs  game.rs  main.rs  player.rs  render.rs  renderer.rs  ty.rs  world.rs
client/src/game/: network.rs  player.rs  world.rs
client/src/render/: atlas.rs  buffer.rs  builder.rs  chunk.rs  debug.rs  draw.rs  entity.rs  mod.rs  neighbor.rs  tile.rs  world.rs
client/src/render/builder/: quad.rs
client/src/render/builtin/: pos_color.vert.glsl
client/src/render/ty/: draw.rs  mesh_buffer.rs  mesh_builder.rs  mod.rs  vertex.rs  viewport.rs
client/src/render/world/: chunk.rs  entity.rs  neighbor.rs
client/src/render/world/chunk/: block.rs  layer.rs
client/src/renderer/: atlas.rs  buffer.rs  debug.rs  entity.rs  tile.rs
client/src/renderer/builder/: quad.rs
client/src/renderer/builtin/: pos_color.vert.glsl
client/src/renderer/shader/: pos_color.frag.glsl
client/src/world/: player.rs
libs/apollo/src/: lib.rs  util.rs
plugin/: manifest.json
plugin/src/: connected_blocks.lua  init.lua  main.lua
src/: debug.rs  lib.rs  player.rs  ty.rs  world.rs
src/api/: id.rs  identifier.rs  luna.rs  mod.rs  prototype.rs  registry.rs  util.rs
src/api/luna/: glue.rs  table.rs
src/api/luna/glue/: fields.rs  methods.rs
src/api/luna/lib/: log.rs  mod.rs  registry_builder.rs  reload.rs  stargate.rs
src/api/plugin/: archive.rs  mod.rs
src/chunk/: block.rs  entry.rs  layer.rs  mod.rs  storage.rs  tile.rs
src/entity/: component.rs  mod.rs  prototype.rs  system.rs
src/entity/system/: collision.rs  humanoid.rs
src/network/: mod.rs  packet.rs  util.rs
src/ty/: block_layer_pos.rs  block_pos.rs  chunk_entry_pos.rs  chunk_pos.rs  direction.rs  id.rs  identifier.rs  world_pos.rs
src/util/: aabb.rs  blake3.rs  mod.rs
src/world/: spread.rs
src/world/chunk/: block.rs  layer.rs  mod.rs  spread.rs  storage.rs
src/world/entity/: component.rs  mod.rs  prototype.rs  system.rs
src/world/entity/system/: collision.rs  humanoid.rs
