[package]
name = "rustaria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
tracing = "0.1.35"

euclid = "0.22.7"
num = "0.4"

hecs = "0.7.6"

crossbeam = "0.8.1"
parking_lot = "0.12.0"

[workspace]
members = [
    "client"
]
