[package]
name = "rustaria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core
eyre = "0.6.8"
tracing = "0.1.35"
serde = { version = "1.0.137", features = ["derive"] }
bitflags = "1.3.2"
type-map = "0.5"


# World
hecs = "0.7.6"

# Plugin
zip = "0.6.2"
semver = { version = "1.0.10", features = ["serde"] }
toml = "0.5.9"

# Lua
apollo = { path = "./libs/apollo" }
mlua = { git = "https://github.com/alphaqu/mlua", branch = "alphacurseness", features = ["luajit", "vendored", "serialize", "send"] }

# Async
rayon = "1.5.3"
crossbeam = "0.8.1"
parking_lot = "0.12.0"

# Random
rand = "0.8.5"
rand_xoshiro = "0.6.0"

# Math
num = "0.4"
euclid = { version = "0.22.7", features = ["serde"] }

[workspace]
members = [
    "client",
    "libs/apollo"
]
